# L2Stack

./: .gitignore  Makefile.am  README  autogen.sh  changelog.txt  configure.ac
L2Stack/: Makefile.am  aidemo.cpp  aidemo.h  archive.cpp  archive.h  block.cpp  block.h  font.cpp  font.h  game.cpp  game.h  graphics.cpp  graphics.h  jsh_color.h  jsh_vector.h  main.cpp  metacube.cpp  metacube.h  mpclient.cpp  mpclient.h  mpgame.cpp  mpgame.h  mpserver.cpp  mpserver.h  mpsetup.cpp  mpsetup.h  mpstart.cpp  mpstart.h  particles.cpp  particles.h  placement.cpp  placement.h  regex.cpp  regex.h  rng.h  script.cpp  script.h  settings.cpp  settings.h  sound.cpp  (+35 more)
bigpak/: Makefile.am  archive.cpp  big_main.cpp
bigpak/.deps/: archive.Po
data/: avirecorder.lua  default.ini  defaults.lua  gui.lua  gui_button.lua  gui_checkbox.lua  gui_gui.lua  gui_input.lua  gui_keyentry.lua  gui_keyselector.lua  gui_keysetup.lua  gui_list.lua  gui_numeric.lua  gui_optionslist.lua  gui_scrollbar.lua  gui_selector.lua  gui_state.lua  gui_title.lua  license.txt  menu_ai.lua  menu_classic.lua  menu_death.lua  menu_easy.lua  menu_file.lua  menu_main.lua  menu_master.lua  menu_message.lua  menu_mp.lua  menu_pause.lua  menu_radar.lua  menu_sp.lua  menu_sprint.lua  mp_game.lua  profile_new.lua  profile_select.lua  settings_game.lua  settings_graphics.lua  settings_keys.lua  settings_menu.lua  sp_game.lua
evolver/: Makefile.am  ga.c  rand.c  rand.h
tetlib/: Makefile.am  ai.c  randomizer.c  rng.c  rotars.c  rotsrs.c  rotsys.c  tet.c  tetai.h  tetlib.h  tetlib.hpp  well.c
