bin_PROGRAMS = L2Stack
L2Stack_LDADD = @LIBGL@ -ltet -L@top_srcdir@/tetlib/ -lboost_filesystem -lboost_system -lSDLmain
L2Stack_SOURCES = aidemo.cpp archive.cpp block.cpp font.cpp \
game.cpp graphics.cpp main.cpp metacube.cpp mpclient.cpp \
mpgame.cpp mpserver.cpp mpsetup.cpp mpstart.cpp particles.cpp \
placement.cpp regex.cpp script.cpp settings.cpp \
sound.cpp spclassic.cpp spdeath.cpp speasy.cpp spmaster.cpp \
spmroll.cpp spplayback.cpp sprecorder.cpp spsprint.cpp \
system.cpp texture.cpp tileset.cpp utility.cpp virtualwell.cpp \
well.cpp spradar.cpp
